[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen-futures = "0.4.37"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.64", features = ["Event"] }
yew = { version="0.21.0", features=["csr"] }
yew-router = "0.18.0"
